--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,22 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+# SPDX-License-Identifier: MIT
+# Copyright (c) [Anno] [Il tuo nome/nickname]
 
-# Uncomment the following line to enable the Corne OLED Display
-# CONFIG_ZMK_DISPLAY=y
+# Configurazione della board (CONTROLLA QUESTO NOME!)
+# Se stai usando un Nice!Nano v2:
+CONFIG_BOARD=nice_nano_v2
+# Se stai usando un Elite-C v4:
+# CONFIG_BOARD=elite_c_v4
+# Se stai usando un'altra board nRF52840 (es. il DK):
+# CONFIG_BOARD=nrf52840dk_nrf52840
+
+# Abilita il tuo shield personalizzato "cygnus"
+CONFIG_ZMK_SHIELD=cygnus
+
+# Altre configurazioni esistenti della Corne (se presenti)
+# Potrebbero esserci altre CONFIG_ZMK_... qui. Lasciale se ti servono.
+
+# Opzionale: Nome Bluetooth
+CONFIG_ZMK_KEYBOARD_NAME="Cygnus"
+
+# Opzionale: Debugging USB (molto utile per handwired)
+CONFIG_ZMK_USB_LOGGING=y
