--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,22 +1,18 @@
 # SPDX-License-Identifier: MIT
 # Copyright (c) [Anno] [Il tuo nome/nickname]
 
-# Configurazione della board (CONTROLLA QUESTO NOME!)
-# Se stai usando un Nice!Nano v2:
-CONFIG_BOARD=nice_nano_v2
-# Se stai usando un Elite-C v4:
-# CONFIG_BOARD=elite_c_v4
-# Se stai usando un'altra board nRF52840 (es. il DK):
-# CONFIG_BOARD=nrf52840dk_nrf52840
+# Seleziona la board del tuo controller nRF52840 (ES: nice_nano_v2, elite_c_v4)
+# ASSICURATI CHE QUESTO NOME SIA CORRETTO PER LA TUA SPECIFICA BOARD
+CONFIG_BOARD=nice_nano_v2 
 
-# Abilita il tuo shield personalizzato "cygnus"
+# Abilita il tuo nuovo shield "cygnus"
+# Il nome qui deve corrispondere al nome della cartella del tuo shield
 CONFIG_ZMK_SHIELD=cygnus
 
-# Altre configurazioni esistenti della Corne (se presenti)
-# Potrebbero esserci altre CONFIG_ZMK_... qui. Lasciale se ti servono.
+# ... (altre configurazioni esistenti della Corne, se presenti. Non toccarle a meno che non sai cosa fanno.)
 
-# Opzionale: Nome Bluetooth
-CONFIG_ZMK_KEYBOARD_NAME="Cygnus"
+# Opzionale: Nome Bluetooth (apparirà quando cerchi dispositivi Bluetooth)
+CONFIG_ZMK_KEYBOARD_NAME="Cygnus Handwired Keyboard"
 
-# Opzionale: Debugging USB (molto utile per handwired)
+# Opzionale: Abilita il logging debug via USB (estremamente utile per il debugging)
 CONFIG_ZMK_USB_LOGGING=y
